ollama/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
  namespace: ollama
spec:
  type: NodePort
  ports:
  - port: 11434
    targetPort: 11434
  selector:
    app: ollama
